Changelog
=========

3.1a2 - unreleased
------------------

- Links in the language selector where broken when using ``_vh_`` parts.
  This closes http://plone.org/products/linguaplone/issues/235.
  [ramon]

- Expanded test coverage extensively. Going from 84% to 93%.
  [hannosch]

- Removed unfinished ``new_manage_translations_form`` prototype.
  [hannosch]

- Silence the ``manage_*`` warnings for the example and test types.
  [hannosch]

- Convert GenericSetup steps registrations to ZCML.
  [hannosch]

- Removed all BBB imports for InitializeClass. We depend on Plone 3.3 which
  comes with Zope 2 versions with the forward compatible import locations, as
  introduced in Zope 2.10.8.
  [hannosch]

- Removed old type actions from example and test types.
  [hannosch]

- Some PEP8 cleanup and minor documentation updates.
  [hannosch]

3.1a1 - 2010-02-19
------------------

- Factor out filtering of "Language" parameter so it can be reused elsewhere.
  [hannosch, witsch]

- Made the manage_translations_form compatible with Plone 4 by replacing a
  call to referencebrowser_startupDirectory with hardcoding the current context
  as the startup directory.
  [huub_bouma]

- Added workflow transitions to the setup view to publish the language folders.
  [hannosch]

- Changed the setup view to give the folders native language titles.
  [hannosch]

- Added automatic setup of the language switcher to the setup view.
  [hannosch]

- Added new ``language-switcher`` view usable as a default view method for the
  Plone site object to dispatch to the appropriate language root folder.
  [hannosch]

- Added new ``language-setup-folders`` helper view to set up a regular structure
  of language root folders for each supported language each marked as a
  navigation root.
  [hannosch]

- Added more CSS classes to the language selector making it possible to target
  each language. Inspired by http://www.thirtysomething.it/.
  [hannosch]
